bitsandbytes/bnb/tests/ui/bin_enum_variant_needs_tag.stderr
error: a no-tag/no-magic fallback variant is not yet implemented; use `#[catch_all]`
 --> tests/ui/bin_enum_variant_needs_tag.rs:6:6
  |
6 | enum E {
  |      ^
